--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -21,10 +21,12 @@
     "react/react-in-jsx-scope": "off",
     "react/prop-types": "off",
     "require-jsdoc": "off",
+    "indent": "off",
     "quotes": "off",
     "no-unused-vars": "warn",
     "linebreak-style": "off",
     "object-curly-spacing": "off",
+    "comma-dangle": "off",
     "prettier/prettier": [
       "error",
       {
