Succsesfully got data from api, possible to console log it, remained to show it on homepage

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -29,7 +29,10 @@
     "types/*",
     "components/SideBar/index.jsx",
     "components/PageLayout/index.jsx",
-    "pages/Contact/index.jsx"
+    "pages/Contact/index.jsx",
+    "localprovider/DataProvider.jsx",
+    "localprovider/DataProvider.jsx",
+    "pages/index.jsx"
   ],
   "exclude": ["node_modules"]
 }
