Added a new home page to replace the initial home page. There is a bug in scss, the project part overflows the page

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -30,8 +30,8 @@
     "components/SideBar/index.jsx",
     "components/PageLayout/index.jsx",
     "pages/Contact/index.jsx",
-    "localprovider/DataProvider.jsx",
-    "localprovider/DataProvider.jsx",
+    "providers/DataProvider.jsx",
+    "providers/DataProvider.jsx",
     "pages/index.jsx"
   ],
   "exclude": ["node_modules"]
