--- a/package.json
+++ b/package.json
@@ -14,8 +14,11 @@
     "@fortawesome/free-solid-svg-icons": "^6.1.1",
     "@fortawesome/react-fontawesome": "^0.2.0",
     "axios": "^0.27.2",
+    "debug": "^4.3.4",
+    "express": "^4.18.1",
     "fortawesome": "^0.0.1-security",
     "next": "^12.1.6",
+    "nodemon": "^2.0.20",
     "react": "18.1.0",
     "react-dom": "18.1.0",
     "sass": "^1.53.0"
@@ -47,5 +50,17 @@
     "node-mocks-http": "^1.11.0",
     "prettier": "^2.6.2",
     "typescript": "4.7.3"
-  }
+  },
+  "description": "This is a [Next.js](https://nextjs.org/) project bootstrapped with [`create-next-app`](https://github.com/vercel/next.js/tree/canary/packages/create-next-app).",
+  "main": ".eslintrc.js",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/Petter1307/PortofolioNextJS.git"
+  },
+  "author": "",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/Petter1307/PortofolioNextJS/issues"
+  },
+  "homepage": "https://github.com/Petter1307/PortofolioNextJS#readme"
 }
