--- a/package.json
+++ b/package.json
@@ -14,9 +14,14 @@
     "@fortawesome/free-solid-svg-icons": "^6.1.1",
     "@fortawesome/react-fontawesome": "^0.2.0",
     "axios": "^0.27.2",
+    "cookie-parser": "^1.4.6",
+    "cookieparser": "^0.1.0",
     "debug": "^4.3.4",
     "express": "^4.18.1",
+    "express-session": "^1.17.3",
     "fortawesome": "^0.0.1-security",
+    "mongodb": "^4.10.0",
+    "morgan": "^1.10.0",
     "next": "^12.1.6",
     "nodemon": "^2.0.20",
     "react": "18.1.0",
